--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,59 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PreuVirtual"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Survival Edition"
+            />
+        <Button
+            android:id="@+id/btnTimeAttack"
+            android:layout_marginTop="5dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="TimeAttack"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/abc_btn_switch_to_on_mtrl_00012"
+            android:onClick="goTimeAttack" />
+        <Button
+            android:id="@+id/btnGoals"
+            android:layout_marginTop="5dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Goals"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/abc_ic_menu_cut_mtrl_alpha"
+            android:enabled="false"/>
+        <Button
+            android:id="@+id/btnEndlees"
+            android:layout_marginTop="5dp"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="Endless"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/abc_ic_voice_search_api_mtrl_alpha"
+            android:enabled="false"/>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
