--- a/app/src/main/res/layout/activity_play_time_attack.xml
+++ b/app/src/main/res/layout/activity_play_time_attack.xml
@@ -1,15 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.novus.preuvirtual.PlayTimeAttack">
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/contentTime"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="fill_parent"
@@ -18,6 +17,46 @@
             android:gravity="center"
             android:text="22:00"
             />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/contentPregunta"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/contentTime"
+        android:orientation="vertical" >
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Hola acá va la pregunta"/>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/contentBntNavegación"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btnBackPregunta"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="<"/>
+        <Button
+            android:id="@+id/btnOmitirPregunta"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text=":("/>
+        <Button
+            android:id="@+id/btnNextPregunta"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text=">"/>
 
     </LinearLayout>
 
