--- a/app/src/main/res/layout/activity_play_time_attack.xml
+++ b/app/src/main/res/layout/activity_play_time_attack.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/contentTime"
         android:orientation="vertical" >
+
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -46,7 +47,7 @@
             android:id="@+id/btnBackPregunta"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="<"/>
+            android:text="Back"/>
         <Button
             android:id="@+id/btnOmitirPregunta"
             android:layout_width="100dp"
@@ -56,7 +57,7 @@
             android:id="@+id/btnNextPregunta"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text=">"/>
+            android:text="Next"/>
 
     </LinearLayout>
 
