Agregado ScrollView y Fragment a la vista PlayTimeAttack

--- a/app/src/main/res/layout/activity_play_time_attack.xml
+++ b/app/src/main/res/layout/activity_play_time_attack.xml
@@ -26,14 +26,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/contentTime"
+        android:layout_above="@+id/contentBntNavegación"
         android:orientation="vertical" >
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Hola acá va la pregunta"/>
-
-
     </LinearLayout>
     <LinearLayout
         android:layout_width="fill_parent"
