--- a/app/src/main/res/layout/activity_tiempo.xml
+++ b/app/src/main/res/layout/activity_tiempo.xml
@@ -14,11 +14,13 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:inputType="numberSigned"
             android:id="@+id/editMinutos"/>
 
         <TextView
@@ -39,6 +41,5 @@
 
 
     </LinearLayout>
-
 
 </RelativeLayout>
