Agregado posible zoom a segunda imagen de pregunta

--- a/app/src/main/res/layout/fragment_pregunta.xml
+++ b/app/src/main/res/layout/fragment_pregunta.xml
@@ -39,6 +39,7 @@
                 android:id="@+id/imagenAlter"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/captura"
+                android:adjustViewBounds="true"
                 android:visibility="visible"/>
 
             <RadioGroup
