--- a/app/src/main/res/layout/activity_revision.xml
+++ b/app/src/main/res/layout/activity_revision.xml
@@ -6,7 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.novus.preuvirtual.Revision">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView
+        android:text="@string/hello_world"
+        android:id="@+id/densidad"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
