--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     <color name="background__start_button">#FF5722</color>
     <color name="background__end_button">#F4511E</color>
     <color name="textButton">#FFFFFF</color>
+    <color name="color_white">#FFFFFF</color>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
@@ -18,14 +19,23 @@
         <!--Button-->
         <item name="colorButtonNormal">@color/background_button</item>
         <!--ActionBar-->
-        <!--<item name="android:actionBarStyle">@style/CustomActionBar</item> -->
+        <!--<item name="android:actionBarStyle">@style/CustomActionBar</item>-->
         <!--<item name="actionBarStyle">@style/CustomActionBar</item>-->
+
+        <item name="android:actionBarTabTextStyle">@style/ActionBarTitleText</item>
+        <item name="android:actionMenuTextColor">@color/color_white</item>
     </style>
 
     <!--CustomActionBar-->
     <style name="CustomActionBar">
+        <item name="android:titleTextStyle">@style/ActionBarTitleText</item>
         <item name="android:background">@color/background_action_bar</item>
         <item name="background">@color/background_action_bar</item>
+    </style>
+
+    <!--ActionBarTitle-->
+    <style name="ActionBarTitleText" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">@color/color_white</item>
     </style>
 
 
