--- a/app/src/main/res/layout/activity_preg_revision.xml
+++ b/app/src/main/res/layout/activity_preg_revision.xml
@@ -4,13 +4,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.novus.preuvirtual.Revision">
+    tools:context="com.novus.preuvirtual.PregRevision">
 
-
-    <ListView
-        android:id="@+id/lista"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/texto"/>
 
 </RelativeLayout>
