--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,16 +21,15 @@
         <!--ActionBar-->
         <!--<item name="android:actionBarStyle">@style/CustomActionBar</item>-->
         <!--<item name="actionBarStyle">@style/CustomActionBar</item>-->
+        <item name="android:actionBarStyle">@style/CustomActionBar</item>
 
-        <item name="android:actionBarTabTextStyle">@style/ActionBarTitleText</item>
-        <item name="android:actionMenuTextColor">@color/color_white</item>
+        <!--<item name="android:actionBarTabTextStyle">@style/ActionBarTitleText</item>-->
+        <!--<item name="android:actionMenuTextColor">@color/color_white</item>-->
     </style>
 
     <!--CustomActionBar-->
     <style name="CustomActionBar">
-        <item name="android:titleTextStyle">@style/ActionBarTitleText</item>
         <item name="android:background">@color/background_action_bar</item>
-        <item name="background">@color/background_action_bar</item>
     </style>
 
     <!--ActionBarTitle-->
