iconos pantalla principal

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,13 +39,13 @@
             android:id="@+id/btnGoals"
             style="@style/CustomButton"
             android:text="Goals"
-            android:drawableLeft="@drawable/ic_alarm_white_24dp"
-            android:onClick="goResultados" />
+            android:drawableLeft="@drawable/ic_goal_24dp"
+            android:enabled="false" />
         <Button
             android:id="@+id/btnEndlees"
             style="@style/CustomButton"
             android:text="Endless"
-            android:drawableLeft="@drawable/ic_alarm_white_24dp"
+            android:drawableLeft="@drawable/ic_endless_24dp"
             android:enabled="false" />
 
     </LinearLayout>
