--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -4,6 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/layoutResultados"
     tools:context="com.novus.preuvirtual.Resultados">
 
     <LinearLayout
@@ -14,7 +15,6 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:gravity="center">
-
 
         <TextView
             android:layout_width="fill_parent"
