--- a/app/src/main/res/layout/activity_resultados.xml
+++ b/app/src/main/res/layout/activity_resultados.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:id="@+id/contentResultados"
-        android:layout_width="fill_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerVertical="true"
@@ -21,7 +21,10 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:id="@+id/textPuntajeObtenido"
-            android:text="Has obtenido 600 puntos"/>
+            android:text="Has obtenido 600 puntos"
+            android:textColor="@color/textTime"
+            android:textStyle="bold"
+            android:textSize="25dp"/>
 
         <TextView
             android:layout_width="fill_parent"
@@ -29,7 +32,10 @@
             android:gravity="center"
             android:id="@+id/textTiempoEnsayo"
             android:text="En ensayo de 25 minutos"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="25dp"
+            android:textColor="@color/textTime"
+            android:textStyle="bold"
+            android:textSize="15dp"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -107,7 +113,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="10dp">
+            android:paddingBottom="10dp"
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,27 +132,21 @@
         </LinearLayout>
         <Button
             android:id="@+id/btnRevisar"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
             android:text="Revisar"
-            android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_revisar_24dp"
+            style="@style/CustomButtonResultados"
             android:onClick="goRevision" />
         <Button
             android:id="@+id/btnNuevoEnsayo"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
             android:text="Nuevo Ensayo"
-            android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_add_24dp"
+            style="@style/CustomButtonResultados"
             android:onClick="goNuevoEnsayo"/>
         <Button
             android:id="@+id/bntCompartir"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
             android:text="Compartir"
-            android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_share_24dp"
+            style="@style/CustomButtonResultados"
             android:enabled="false"/>
     </LinearLayout>
 </RelativeLayout>
