--- a/app/src/main/res/layout/activity_tiempo.xml
+++ b/app/src/main/res/layout/activity_tiempo.xml
@@ -18,24 +18,25 @@
         android:id="@+id/linearLayout">
 
         <EditText
-            android:layout_width="fill_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:id="@+id/editMinutos"/>
 
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="Minutos"/>
+            android:text="Minutos"
+            android:textStyle="bold"
+            android:textColor="@color/list_preguntas"
+            android:paddingBottom="5dp"/>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:text="Comenzar"
             android:drawableLeft="@drawable/ic_play_24dp"
-            android:drawablePadding="5dp"
             android:id="@+id/btnComenzar"
+            style="@style/CustomButton"
             android:onClick="goPlayTimeAttack"/>
     </LinearLayout>
 
