--- a/app/src/main/res/layout/list_preg_revision.xml
+++ b/app/src/main/res/layout/list_preg_revision.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:orientation="horizontal">
+    android:layout_height="45dp"
+    android:orientation="horizontal"
+    android:layout_gravity="center_horizontal">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:id="@+id/titulo"
-        android:textSize="20dp"/>
+        android:textSize="18dp"
+        android:textColor="@color/list_preguntas"
+        android:gravity="center_vertical"
+        android:text="Example 1"
+        android:layout_marginLeft="10dp"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/icono"/>
+        android:id="@+id/icono"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/ic_check_36dp"
+        android:layout_marginLeft="100dp" />
 
 
 
